--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <title>Sorting on a canvas</title>
     <link rel="stylesheet" type="text/css" href="sort.css" />
-    <link rel="stylesheet" type="text/css" href="http://liamkaufman.com/css/projects.css"
+    <link rel="stylesheet" type="text/css" href="http://liamkaufman.com/css/projects.css" />
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script type="text/javascript" src="sort.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lekton&v1' rel='stylesheet' type='text/css'>
       <meta charset="utf-8">
   </head>
   <body>
-    <div id="liamkaufman_banner">
+    <a href="https://github.com/liamks/Sorting-Visualization"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/edc6dae7a1079163caf7f17c60495bbb6d027c93/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub"></a>
+      <div id="liamkaufman_banner">
       Created by <a href="http://liamkaufman.com">Liam Kaufman</a> - 2011
     </div>
       
